update, blog address

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="my-content">
     <h2>hello</h2>
     <ul class="list-wrapper">
-      <li>博客 <a href="">博客地址</a></li>
+      <li>博客 <a href="https://lixingjuan.github.io/blog/">博客地址</a></li>
       <li>插件 <a href="">插件地址</a></li>
       <li>mock-server</a> <a href="">地址</a></li>
     </ul>
